<resources>
    <string name="app_name">Football Frenzy</string>
    <string name="button_addBall">Add Player</string>
    <string name="hint_ballTitle">Player Name</string>
    <string name="hint_ballDescription">Club </string>
    <string name="hint_ballEngineSize">Country </string>
    <string name="menu_addBall">Add</string>
    <string name="menu_cancelBall">Cancel</string>
    <string name="enter_ball_title"> Please enter all player details </string>
    <string name="enter_ball_enginesize"> Please enter the players country  </string>
    <string name="enter_balldescription_"> Please enter the players club </string>

    <string name="save_ball"> Save Ball </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_ball_image">Select player Image</string>
    <string name="change_ball_image">Change player Image</string>
    <string name="ball_image">Player Image</string>
    <string name="button_location">Visit Us</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deleteBall">Delete </string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="password">Password</string>

</resources>
