<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.ball.activities.BallActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/messi"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1D6A15"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Player"
                android:textColor="#FFFFFD"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ballTitle"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_margin="8dp"
                    android:background="#FF5722"
                    android:backgroundTint="#80CBC4"
                    android:hint="@string/hint_ballTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="14sp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_margin="8dp"
                    android:background="#FF5722"
                    android:backgroundTint="#80CBC4"
                    android:hint="@string/hint_ballDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="#000000"
                    android:textColorHint="#1D0101"
                    android:textSize="14sp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/enginesize"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_margin="8dp"
                    android:background="#80CBC4"
                    android:backgroundTint="#80CBC4"
                    android:hint="@string/hint_ballEngineSize"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="#000000"
                    android:textColorHint="#130000"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/ballImage"
                    android:contentDescription="@string/ball_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />


                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:background="#116A12"

                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:background="#29731B"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addBall"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnFixtures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:background="#29731B"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addBall"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
